# superzig

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: cmake-workflow-default.yml
cmake/: cosmocc.cmake  generate.cmake  zipmerge
src/: zig.cpp
